monetdb4/modules/plain/Tests/mmath.stable.out.Windows
stdout of test 'mmath` in directory 'src/modules/plain` itself:


# 10:30:05 >  
# 10:30:05 >   Mserver "--config=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\conf\MonetDB.conf" --debug=10 --set "monet_mod_path=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\modules\plain\.libs;C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\modules\contrib\.libs;C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\modules\calibrator\.libs;C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\mapi\.libs" --set "gdk_dbfarm=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\dbfarm" --set "sql_logdir=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\log" --set mapi_port=42009 --set sql_port=53391 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < mmath.milM
# 10:30:05 >  

# Monet Database Server V4.5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# Compiled for i686-pc-win32/32bit; dynamically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module("mmath");

setoid(oid(20000000));

# NOTE: If there would be a system with large enough doubles than
#       the expression could actually produce a correct output...
#       (unlikely with IEEE(like) floating point types though)
pow(2.0LL,5000.0LL).print();
[ 1.#INF ]
isinf(pow(2.0LL,5000.0LL)).print();
[ 1 ]
pow(-2.0LL,5001.0LL).print();
[ -1.#INF ]
isinf(pow(-2.0LL,5001.0LL)).print();
[ -1 ]
	
finite(1.0LL).print();
[ true ]
finite(log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: finite(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
finite(pow(2.0LL,5000.0LL)).print();
[ false ]
finite(pow(-2.0LL,5001.0LL)).print();
[ false ]

quit();

# 10:30:06 >  
# 10:30:06 >  Done.
# 10:30:06 >  

